# knowledgehub-ai

./: .env.example  .gitignore  NOTES.md  README.md  docker-compose.yml  knowledgehub-ai.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  seed.py
backend/app/models/: __init__.py  conversation.py  document.py  message.py  timestamps.py  user.py
backend/app/routers/: auth.py  chat.py  conversations.py  documents.py
backend/app/schemas/: auth.py  chat.py  conversation.py  document.py
backend/app/services/: auth.py  llm.py  rag.py
backend/ingestion/: chunk.py  convert.py  index.py  pipeline.py
backend/tests/: conftest.py  test_auth.py  test_auth_service.py  test_chat.py  test_chunk.py  test_config.py  test_conversations.py  test_convert.py  test_cors.py  test_documents.py  test_health.py  test_index.py  test_llm.py  test_models.py  test_pipeline.py  test_seed.py
docs/: api-contract.md  architecture.md  deployment-plan.md
frontend/: Dockerfile  README.md  package-lock.json  package.json
tasks/: 00-repo-setup.md  01-fastapi-postgres-skeleton.md  02-rag-chat-endpoint.md  03-sse-streaming.md  04-conversation-persistence.md  05-backend-tests-v010.md  06-chat-ui-layout.md  07-wire-frontend-backend.md  08-streaming-ui.md  09-history-ui.md  10-ui-polish-v020.md  11-upload-endpoint.md  12-background-ingestion.md  13-document-list-delete.md  14-knowledge-page-ui.md  15-e2e-loop-v030.md  16-auth-backend.md  17-auth-frontend.md  18-citations.md  19-ugly-inputs-v040.md  20-dockerize.md  21-deploy.md  todo.md  (+7 more)
(+23 files in other folders)
