[project]
name = "knowledgehub-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.5",
    "chromadb>=0.5",
    "markitdown[all]>=0.1.5",
    "langchain-text-splitters>=0.3",
    "openai>=1.50",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",  # passlib 1.7.4 doesn't support bcrypt's post-4.1 API (no `__about__`)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "ingestion"]
